Re Order NMR Local in Header

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -228,6 +228,11 @@ Modify at your own peril, a broken website is the likely result.
         flex-shrink: 0 !important;
         align-self: flex-start !important;
       }
+      .header-cart-search-row .search-bar {
+        max-width: 100% !important;
+        min-width: 250px !important;
+        flex: 1 1 auto !important;
+      }
     }
   </style>
   <div class="wrapper">
