Re Order NMR Local in Header

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7427,7 +7427,7 @@ form#ecom-round-search-bar input{
 /*============================================================================
   Mighty Location Selector Phone Styling - Use Header Text Color
 ==============================================================================*/
-.mighty-location-selector-phone {
+.mighty-location-selector-content .mighty-location-selector-phone {
   color: $headerText !important;
   
   a {
