--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -236,6 +236,10 @@
       {% else %}
         <div class="flex-item" style="display: flex; justify-content: center; align-items: center;" id="ecom2-account-cart">      
       {% endif %}
+        {%if settings.nmr_local %}
+          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle; margin-right: 15px;"></div>
+          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+        {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
                 <div style="display: flex; align-items: center; white-space: nowrap; margin-left: 30px;">
@@ -276,11 +280,6 @@
     		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
           </a>
         {% endunless %}
-
-        {%if settings.nmr_local %}
-          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle; margin-left: 15px;"></div>
-          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
-        {% endif %}
 
       </div>
     </div>
