--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -234,7 +234,7 @@
       {% if settings.nmr_local %}
         <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; width: 100%; max-width: 400px; margin-left: 30px; gap: 20px;" id="ecom2-account-cart">      
       {% else %}
-        <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; gap: 20px;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: flex-start; align-items: center; gap: 30px; margin-left: 30px;" id="ecom2-account-cart">      
       {% endif %}
         {%if settings.nmr_local %}
           <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
