--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -237,8 +237,19 @@
         <div class="flex-item" style="display: flex; justify-content: flex-start; align-items: center; gap: 30px; margin-left: 30px;" id="ecom2-account-cart">      
       {% endif %}
         {%if settings.nmr_local %}
-          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
-          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          <div class="header-store-locator">
+            <script>
+              window.MightyLocationSelectorConfig = {
+                theme: 'light',          // 'light' or 'dark' (default: 'light')
+                showHours: true,         // Show "open until" text (default: true)
+                showCityState: true,     // Show city/state below location name (default: true)
+                showPhone: true,         // Show clickable phone number (default: true)
+                defaultLocationId: null  // Default location ID to pre-select
+              };
+            </script>
+            <div id="mighty-location-selector"></div>
+            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js"></script>
+          </div>
         {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
