--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -232,7 +232,7 @@
       </div>
 
       {% if settings.nmr_local %}
-        <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; width: 100%; max-width: 400px; gap: 20px; flex-wrap: nowrap;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; flex-wrap: nowrap;" id="ecom2-account-cart">      
       {% else %}
         <div class="flex-item" style="display: flex; justify-content: flex-start; align-items: center; gap: 30px; flex-wrap: nowrap;" id="ecom2-account-cart">      
       {% endif %}
