Fix Header Spacing

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7675,6 +7675,7 @@ div#ecom2-notification-bar .announcement-text a {
     margin-left: auto !important;
     width: auto !important;
     max-width: none !important;
+    justify-content: flex-end !important;
 }
 
 /* Store locator should have a max width to prevent it from taking too much space */
