--- a/snippets/ecom-header-3.liquid
+++ b/snippets/ecom-header-3.liquid
@@ -352,17 +352,28 @@
   <div class="flex-header-item" id="shopping-links" style="flex:auto;">
     {% unless page.template_suffix contains 'dalp' %}
     {% if section.settings.hide_shopping_links %}
-    	<ul id="mobile-contact-info">
-        {% if section.settings.show_phone %}
-        <li><a aria-label="phone number" href="tel:{{ section.settings.header_phone | escape }}"><span class="fa-solid fa-phone"></span></a></li>
-        {% endif %}
-        {% if section.settings.show_email %}
-        <li><a aria-label="email" href="mailto:{{ section.settings.header_email | escape }}"><span class="fa-solid fa-envelope"></span></a></li>
-        {% endif %}
-        {% if section.settings.show_locations %}
-        <li><a aria-label="locations" href="{{ section.settings.header_locations | escape }}"><span class="fa-solid fa-location-pin"></span></a></li>
-        {% endif %}
-      </ul>
+    	{% unless settings.nmr_local %}
+        <ul id="mobile-contact-info">
+          
+          {% if section.settings.show_phone %}
+          <li><a aria-label="phone number" href="tel:{{ section.settings.header_phone | escape }}"><span class="fa-solid fa-phone"></span></a></li>
+          {% endif %}
+          {% if section.settings.show_email %}
+          <li><a aria-label="email" href="mailto:{{ section.settings.header_email | escape }}"><span class="fa-solid fa-envelope"></span></a></li>
+          {% endif %}
+          {% if section.settings.show_locations %}
+          <li><a aria-label="locations" href="{{ section.settings.header_locations | escape }}"><span class="fa-solid fa-location-dot"></span></a></li>
+          {% endif %}
+        
+        </ul>
+      {% endunless %}
+    {% else %}
+      {% unless page.template_suffix contains 'dalp' %}
+        <a href="/cart" class="cart-toggle mobileNavBar-link" style="display: flex; line-height: 1.6; flex-direction: column;">
+        <span class="icon icon-cart" style="line-height: 1.6;"><span class="sr-only">Cart</span></span>
+        <span class="cart-count {% if cart.item_count == 0 %}hidden-count{% endif %}">{{ cart.item_count }}</span>
+        </a>
+      {% endunless %}
     {% else %}
         <a href="/cart" class="cart-toggle mobileNavBar-link" style="display: flex; line-height: 1.6; flex-direction: column;">
         <span class="icon icon-cart" style="line-height: 1.6;"></span>
