--- a/snippets/ecom-header.liquid
+++ b/snippets/ecom-header.liquid
@@ -395,19 +395,21 @@
   
   <div class="flex-header-item" id="shopping-links" style="width:20%;">
     {% if section.settings.hide_shopping_links %}
-    	<ul id="mobile-contact-info">
+      {% unless settings.nmr_local %}
+        <ul id="mobile-contact-info">
+          
+          {% if section.settings.show_phone %}
+          <li><a aria-label="phone number" href="tel:{{ section.settings.header_phone | escape }}"><span class="fa-solid fa-phone"></span></a></li>
+          {% endif %}
+          {% if section.settings.show_email %}
+          <li><a aria-label="email" href="mailto:{{ section.settings.header_email | escape }}"><span class="fa-solid fa-envelope"></span></a></li>
+          {% endif %}
+          {% if section.settings.show_locations %}
+          <li><a aria-label="locations" href="{{ section.settings.header_locations | escape }}"><span class="fa-solid fa-location-dot"></span></a></li>
+          {% endif %}
         
-        {% if section.settings.show_phone %}
-        <li><a aria-label="phone number" href="tel:{{ section.settings.header_phone | escape }}"><span class="fa-solid fa-phone"></span></a></li>
-        {% endif %}
-        {% if section.settings.show_email %}
-        <li><a aria-label="email" href="mailto:{{ section.settings.header_email | escape }}"><span class="fa-solid fa-envelope"></span></a></li>
-        {% endif %}
-        {% if section.settings.show_locations %}
-        <li><a aria-label="locations" href="{{ section.settings.header_locations | escape }}"><span class="fa-solid fa-location-dot"></span></a></li>
-        {% endif %}
-      
-      </ul>
+        </ul>
+      {% endunless %}
     {% else %}
       {% unless page.template_suffix contains 'dalp' %}
         <a href="/cart" class="cart-toggle mobileNavBar-link" style="display: flex; line-height: 1.6; flex-direction: column;">
